tests/error/addInteger-wrong-2nd-argument-string.uplc
(program 1.0.0[[(builtin addInteger)(con integer 10)](con string "Ola")])